// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`backgroundImage > renders an img element when img is provided 1`] = `"<img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover">"`;

exports[`backgroundImage > renders nothing when no img is provided 1`] = `"<!--v-if-->"`;

exports[`backgroundImage > renders with a custom alt text 1`] = `"<img src="/test-image.jpg" alt="Custom alt text" class="absolute top-0 left-0 w-full h-full object-cover">"`;

exports[`backgroundImage > renders with imgClass applied 1`] = `"<img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover object-top">"`;

exports[`card > renders correctly with default slot 1`] = `
"<div class="border border-12 border-white/30 shadow-2xl rounded-3xl">
  <div class="overflow-hidden h-full w-full bg-white dark:bg-neutral-800 rounded-xl p-6 shadow-lg">
    <p>Card content</p>
  </div>
</div>"
`;

exports[`cardLayout > renders correctly with imgClass 1`] = `
"<div class="relative slidev-layout"><img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover object-top">
  <div class="absolute z-10 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
    <div class="border border-12 border-white/30 shadow-2xl rounded-3xl">
      <div class="overflow-hidden h-full w-full bg-white dark:bg-neutral-800 rounded-xl p-6 shadow-lg">
        <p>Card content</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`cardLayout > renders correctly with outside slot 1`] = `
"<div class="relative slidev-layout"><img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover">
  <div class="absolute z-10 bottom-10 left-14">
    <div class="border border-12 border-white/30 shadow-2xl rounded-3xl">
      <div class="overflow-hidden h-full w-full bg-white dark:bg-neutral-800 rounded-xl p-6 shadow-lg">
        <p>Card content</p>
      </div>
    </div>
  </div>
  <div class="outside-content">Outside</div>
</div>"
`;

exports[`cardLayout > renders correctly with position "bottom-center" 1`] = `
"<div class="relative slidev-layout"><img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover">
  <div class="absolute z-10 bottom-10 left-1/2 -translate-x-1/2">
    <div class="border border-12 border-white/30 shadow-2xl rounded-3xl">
      <div class="overflow-hidden h-full w-full bg-white dark:bg-neutral-800 rounded-xl p-6 shadow-lg">
        <p>Card content</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`cardLayout > renders correctly with position "bottom-left" 1`] = `
"<div class="relative slidev-layout"><img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover">
  <div class="absolute z-10 bottom-10 left-14">
    <div class="border border-12 border-white/30 shadow-2xl rounded-3xl">
      <div class="overflow-hidden h-full w-full bg-white dark:bg-neutral-800 rounded-xl p-6 shadow-lg">
        <p>Card content</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`cardLayout > renders correctly with position "bottom-right" 1`] = `
"<div class="relative slidev-layout"><img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover">
  <div class="absolute z-10 bottom-10 right-14">
    <div class="border border-12 border-white/30 shadow-2xl rounded-3xl">
      <div class="overflow-hidden h-full w-full bg-white dark:bg-neutral-800 rounded-xl p-6 shadow-lg">
        <p>Card content</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`cardLayout > renders correctly with position "center" 1`] = `
"<div class="relative slidev-layout"><img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover">
  <div class="absolute z-10 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
    <div class="border border-12 border-white/30 shadow-2xl rounded-3xl">
      <div class="overflow-hidden h-full w-full bg-white dark:bg-neutral-800 rounded-xl p-6 shadow-lg">
        <p>Card content</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`cardLayout > renders correctly with position "center-left" 1`] = `
"<div class="relative slidev-layout"><img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover">
  <div class="absolute z-10 top-1/2 left-14 -translate-y-1/2">
    <div class="border border-12 border-white/30 shadow-2xl rounded-3xl">
      <div class="overflow-hidden h-full w-full bg-white dark:bg-neutral-800 rounded-xl p-6 shadow-lg">
        <p>Card content</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`cardLayout > renders correctly with position "center-right" 1`] = `
"<div class="relative slidev-layout"><img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover">
  <div class="absolute z-10 top-1/2 right-14 -translate-y-1/2">
    <div class="border border-12 border-white/30 shadow-2xl rounded-3xl">
      <div class="overflow-hidden h-full w-full bg-white dark:bg-neutral-800 rounded-xl p-6 shadow-lg">
        <p>Card content</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`cardLayout > renders correctly with position "top-center" 1`] = `
"<div class="relative slidev-layout"><img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover">
  <div class="absolute z-10 top-14 left-1/2 -translate-x-1/2">
    <div class="border border-12 border-white/30 shadow-2xl rounded-3xl">
      <div class="overflow-hidden h-full w-full bg-white dark:bg-neutral-800 rounded-xl p-6 shadow-lg">
        <p>Card content</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`cardLayout > renders correctly with position "top-left" 1`] = `
"<div class="relative slidev-layout"><img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover">
  <div class="absolute z-10 top-14 left-14">
    <div class="border border-12 border-white/30 shadow-2xl rounded-3xl">
      <div class="overflow-hidden h-full w-full bg-white dark:bg-neutral-800 rounded-xl p-6 shadow-lg">
        <p>Card content</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`cardLayout > renders correctly with position "top-right" 1`] = `
"<div class="relative slidev-layout"><img src="/test-image.jpg" alt="Presentation Image" class="absolute top-0 left-0 w-full h-full object-cover">
  <div class="absolute z-10 top-14 right-14">
    <div class="border border-12 border-white/30 shadow-2xl rounded-3xl">
      <div class="overflow-hidden h-full w-full bg-white dark:bg-neutral-800 rounded-xl p-6 shadow-lg">
        <p>Card content</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`footer > renders correctly with default slot 1`] = `"<footer class="absolute left-1/2 -translate-x-1/2 bottom-4"><span>Footer content</span></footer>"`;

exports[`footerItem > renders correctly with default slot 1`] = `"<div class="font-light text-[0.875rem] text-neutral-400 dark:text-neutral-600"><span>Item content</span></div>"`;

exports[`footerItem > renders correctly with text prop 1`] = `"<div class="font-light text-[0.875rem] text-neutral-400 dark:text-neutral-600"><span>Footer item text</span></div>"`;

exports[`footerLink > renders correctly with href and text 1`] = `
"<a class="font-light text-[0.875rem] text-neutral-400 dark:text-neutral-600 flex items-center gap-1" href="https://example.com">
  <!--v-if--><span class="whitespace-nowrap">Example</span>
</a>"
`;

exports[`footerLink > renders correctly with href, text and icon 1`] = `"<a class="font-light text-[0.875rem] text-neutral-400 dark:text-neutral-600 flex items-center gap-1" href="https://example.com"><span class="i-ph-house-duotone size-4 inline-block"></span><span class="whitespace-nowrap">Example</span></a>"`;

exports[`icon > renders correctly with a name 1`] = `"<span class="inline-flex i-ph-house-duotone"></span>"`;

exports[`icon > renders correctly with a name and class 1`] = `"<span class="inline-flex i-ph-house-duotone size-4"></span>"`;

exports[`tree > renders correctly with the panel variant 1`] = `
"<ul role="tree" tabindex="-1" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" class="select-none flex flex-col text-xs p-2 not-content list-none gap-0.5 bg-neutral-800 rounded-md font-light">
  <h2 class="mb-2 text-sm font-semibold">Project Files</h2>
  <li aria-setsize="2" aria-posinset="1" class="flex flex-row items-center gap-1" style="padding-left: 0.5rem;" role="treeitem" aria-selected="false" aria-expanded="true" aria-level="1" data-indent="1" data-expanded="" tabindex="-1" data-orientation="vertical" data-active="true" data-reka-collection-item=""><span class="inline-flex i-vscode-icons-folder-type-src-opened size-3"></span>
    <div>src</div>
  </li>
  <li aria-setsize="1" aria-posinset="1" class="flex flex-row items-center gap-1" style="padding-left: 1.5rem;" role="treeitem" aria-selected="false" aria-level="2" data-indent="2" tabindex="-1" data-orientation="vertical" data-active="true" data-reka-collection-item=""><span class="inline-flex i-vscode-icons-file-type-typescript size-3"></span>
    <div>main.ts</div>
  </li>
  <li aria-setsize="2" aria-posinset="2" class="flex flex-row items-center gap-1" style="padding-left: 0.5rem;" role="treeitem" aria-selected="false" aria-level="1" data-indent="1" tabindex="-1" data-orientation="vertical" data-active="true" data-reka-collection-item=""><span class="inline-flex i-vscode-icons-file-type-npm size-3"></span>
    <div>package.json</div>
  </li>
</ul>"
`;

exports[`tree > renders correctly with the plain variant 1`] = `
"<ul role="tree" tabindex="-1" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" class="select-none flex flex-col text-xs not-content list-none gap-0.5 font-light">
  <h2 class="mb-1 text-sm font-semibold text-neutral-500">Project Files</h2>
  <li aria-setsize="2" aria-posinset="1" class="flex flex-row items-center gap-2" style="padding-left: 0.5rem;" role="treeitem" aria-selected="false" aria-expanded="true" aria-level="1" data-indent="1" data-expanded="" tabindex="-1" data-orientation="vertical" data-active="true" data-reka-collection-item=""><span class="inline-flex i-vscode-icons-folder-type-src-opened size-5"></span>
    <div>src</div>
  </li>
  <li aria-setsize="1" aria-posinset="1" class="flex flex-row items-center gap-2" style="padding-left: 1.5rem;" role="treeitem" aria-selected="false" aria-level="2" data-indent="2" tabindex="-1" data-orientation="vertical" data-active="true" data-reka-collection-item=""><span class="inline-flex i-vscode-icons-file-type-typescript size-5"></span>
    <div>main.ts</div>
  </li>
  <li aria-setsize="2" aria-posinset="2" class="flex flex-row items-center gap-2" style="padding-left: 0.5rem;" role="treeitem" aria-selected="false" aria-level="1" data-indent="1" tabindex="-1" data-orientation="vertical" data-active="true" data-reka-collection-item=""><span class="inline-flex i-vscode-icons-file-type-npm size-5"></span>
    <div>package.json</div>
  </li>
</ul>"
`;
